--- a/index.html
+++ b/index.html
@@ -8,5 +8,83 @@
   </head>
   <body>
 
+    <!--Logo-->
+
+    <header>
+      <div class="logo-icon">
+        <img src="resources/images/logo.png" alt="secret agent supply logo">
+      </div>
+      <div class="logo-text">
+        <h1>Secret Agent Supply Inc.</h1>
+      </div>
+    </header>
+
+
+    <!--Main Banner-->
+
+    <div class="main-banner">
+        <div class="content">
+          <h2>New Arrival</h2>
+          <h1>Sport Bikes and Motorcycles</h1>
+        </div>
+    </div>
+
+
+    <!--Navigation-->
+
+
+    <nav>
+      <ul>
+        <li><a href="#eyewear"></a>Eyewear</li>
+        <li><a href="#apparel"></a>Apparel</li>
+        <li><a href="#gadgets"></a>Gadgets</li>
+        <li><a href="#vehicles"></a>Vehicles</li>
+        <li><a href="#classes"></a>Classes</li>
+        <li><a href="#contact"></a>Contact</li>
+      </ul>
+    </nav>
+
+
+    <!--Product Grid-->
+
+
+    <div class="product-grid">
+      <div class="grid-item">
+        <img src="resources/images/pen.png" alt="exploding pen">
+        <h2>Exploding Pen</h2>
+      </div>
+      <div class="grid-item">
+        <img src="resources/images/watch.png" alt="cellular watch">
+        <h2>Cellular Watch</h2>
+      </div>
+      <div class="grid-item">
+        <img src="resources/images/glasses.png" alt="thermal glasses">
+        <h2>Thermal Glasses</h2>
+      </div>
+    </div>
+
+
+    <!--Location & Hours-->
+
+
+    <div class="info-wrapper">
+      <div class="location">
+        <h2>Location</h2>
+        <p>-47.346436, 84.32354</p>
+      </div>
+      <div class="hours">
+        <h2>Hours</h2>
+        <p>0800 - 1800</p>
+      </div>
+    </div>
+
+
+    <!--Footer-->
+
+
+    <footer>
+      <h2>Copyright Secret Agent Supply Inc.</h2>
+    </footer>
+
   </body>
 </html>
