Styled header, banner, nav and product-grid.

--- a/index.html
+++ b/index.html
@@ -50,15 +50,21 @@
 
     <div class="product-grid">
       <div class="grid-item">
-        <img src="resources/images/pen.png" alt="exploding pen">
+        <div class="image-wrapper">
+          <img src="resources/images/pen.png" alt="exploding pen">
+        </div>
         <h2>Exploding Pen</h2>
       </div>
       <div class="grid-item">
-        <img src="resources/images/watch.png" alt="cellular watch">
+        <div class="image-wrapper">
+          <img src="resources/images/watch.png" alt="cellular watch">
+        </div>
         <h2>Cellular Watch</h2>
       </div>
       <div class="grid-item">
-        <img src="resources/images/glasses.png" alt="thermal glasses">
+        <div class="image-wrapper">
+          <img src="resources/images/glasses.png" alt="thermal glasses">
+        </div>
         <h2>Thermal Glasses</h2>
       </div>
     </div>
