--- a/index.html
+++ b/index.html
@@ -2,95 +2,100 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0">
     <title>Secret Agent Supply Inc.</title>
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
+
   <body>
 
-    <!--Logo-->
+    <!--Logo Header-->
 
     <header>
-      <div class="logo-icon">
-        <img src="resources/images/logo.png" alt="secret agent supply logo">
-      </div>
-      <div class="logo-text">
-        <h1>Secret Agent Supply Inc.</h1>
+      <div class="container">
+        <img src="./resources/images/logo.png" alt="secret agent supply logo">
+        <span>Secret Agent Supply Inc.</span>
       </div>
     </header>
 
 
-    <!--Main Banner-->
+    <!--Main Section-->
 
-    <div class="main-banner">
-        <div class="content">
-          <h2>New Arrival</h2>
-          <h1>Sport Bikes and Motorcycles</h1>
+    <main>
+
+      <!--Banner-->
+
+      <section class="banner">
+          <div class="container">
+            <div class="content">
+              <h2>New Arrival</h2>
+              <h3>Sport Bikes and Motorcycles</h3>
+            </div>
+          </div>
+      </section>
+
+      <!--Navigation-->
+
+      <nav>
+        <ul class="container">
+          <li><a href="#eyewear"></a>Eyewear</li>
+          <li><a href="#apparel"></a>Apparel</li>
+          <li><a href="#gadgets"></a>Gadgets</li>
+          <li><a href="#vehicles"></a>Vehicles</li>
+          <li><a href="#classes"></a>Classes</li>
+          <li><a href="#contact"></a>Contact</li>
+        </ul>
+        <a class="menu-button" href="#">Menu</a>
+      </nav>
+
+      <!--Product Grid-->
+
+      <section class="product container">
+        <figure id="pen">
+          <div class="image-wrapper">
+            <img src="./resources/images/pen.png" alt="exploding pen">
+          </div>
+          <figcaption>Exploding Pen</figcaption>
+        </figure>
+        <figure id="watch">
+          <div class="image-wrapper">
+            <img src="./resources/images/watch.png" alt="cellular watch">
+          </div>
+          <figcaption>Cellular Watch</figcaption>
+        </figure>
+        <figure id="glasses">
+          <div class="image-wrapper">
+            <img src="./resources/images/glasses.png" alt="thermal glasses">
+          </div>
+          <figcaption>Thermal Glasses</figcaption>
+        </figure>
+      </section>
+
+      <!--Location & Hours-->
+
+      <section class="info container">
+        <div class="info-detail">
+          <h5>Location</h5>
+          <p>-47.346436, 84.32354</p>
         </div>
-    </div>
-
-
-    <!--Navigation-->
-
-
-    <nav>
-      <ul>
-        <li><a href="#eyewear"></a>Eyewear</li>
-        <li><a href="#apparel"></a>Apparel</li>
-        <li><a href="#gadgets"></a>Gadgets</li>
-        <li><a href="#vehicles"></a>Vehicles</li>
-        <li><a href="#classes"></a>Classes</li>
-        <li><a href="#contact"></a>Contact</li>
-      </ul>
-    </nav>
-
-
-    <!--Product Grid-->
-
-
-    <div class="product-grid">
-      <div class="grid-item">
-        <div class="image-wrapper">
-          <img src="resources/images/pen.png" alt="exploding pen">
+        <div class="info-detail">
+          <h5>Hours</h5>
+          <p>0800 - 1800</p>
         </div>
-        <h2>Exploding Pen</h2>
-      </div>
-      <div class="grid-item">
-        <div class="image-wrapper">
-          <img src="resources/images/watch.png" alt="cellular watch">
-        </div>
-        <h2>Cellular Watch</h2>
-      </div>
-      <div class="grid-item">
-        <div class="image-wrapper">
-          <img src="resources/images/glasses.png" alt="thermal glasses">
-        </div>
-        <h2>Thermal Glasses</h2>
-      </div>
-    </div>
+      </section>
 
-
-    <!--Location & Hours-->
-
-
-    <div class="info-wrapper">
-      <div class="location">
-        <h2>Location</h2>
-        <p>-47.346436, 84.32354</p>
-      </div>
-      <div class="hours">
-        <h2>Hours</h2>
-        <p>0800 - 1800</p>
-      </div>
-    </div>
+    </main>
 
 
     <!--Footer-->
 
-
     <footer>
-      <h2>Copyright Secret Agent Supply Inc.</h2>
+      <section class="container">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </section>
     </footer>
 
   </body>
+
 </html>
